# project-outline-cpp

./: CMakeLists.txt  CMakePresets.json  README.md  vcpkg-configuration.json  vcpkg.json
.devcontainer/build-gcc/: Dockerfile  devcontainer.json
src/: CMakeLists.txt  foo.h
tests/: CMakeLists.txt  foo.test.cpp
